2007-03-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-event.[ch]: Remove the flags member from
	the ClutterEvent structure; remove the ClutterEventFlags
	enum.

2007-03-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-stage.h: Remove the ::get_actor_at_pos()
	and ::flush() vfuncs.

	* clutter/glx/clutter-stage-glx.c: Remove the implementations
	of those vfuncs from the backend specific code, as they are
	pure GL calls.

	* clutter/clutter-stage.c: Add back the actor hit detection
	code in the base stage class, along with the viewport
	synchronisation function.

	* clutter/clutter-private.h: Declare the private function
	_clutter_stage_sync_viewport().

2007-03-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-backend.c: Clear the event queue when
	disposing the backend object; remove the initialisation
	of the backend structure members...

	* clutter/glx/clutter-backend-glx.c: ... and keep it here
	in the backends where it belongs.

2007-03-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-private.h:
	* clutter/clutter-backend.h: Move the backend functions
	into the private header.

	* clutter/glx/clutter-stage-glx.c:
	* clutter/glx/clutter-event-glx.c:
	* clutter/clutter-main.c:
	* clutter/clutter-stage.c: Update the calls to the private
	backend functions.

	* clutter/clutter-backend.[ch]: Add an ::init_features
	vfunc to ClutterBackend.

2007-03-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/glx/clutter-stage-glx.c:
	Make sure the top-left corner of the box is our origin,
	when returning the allocation.

	* clutter/clutter-stage.c:
	* clutter/clutter-group.c: Add tracing for the paint
	method.

2007-03-23  Matthew Allum  <mallum@openedhand.com>

	* clutter/glx/clutter-stage-glx.c:
	(clutter_stage_glx_allocate_coords):
	Make new stage return correct width & height.

2007-03-23  Emmanuele Bassi  <ebassi@openedhand.com>

	Assorted build fixes to pass distcheck.
